<resources>
    <string name="app_name">E-commerce Application</string>
    <string name="welcome_to_your_shopping_journey">Welcome to your shopping journey</string>
    <string name="shopping_time">Shopping Time</string>
    <string name="start">START</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="please_login">Please Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_please_register">Don\'t have an account? Please Register</string>
    <string name="forget_password">Forget Password</string>
    <string name="login_with_google">Login with google</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="please_register">Please Register</string>
    <string name="cancel">CANCEL</string>
    <string name="reset">RESET</string>
    <string name="please_enter_the_email_where_you_want_to_the_reset_password_link">Please Enter the email where you want to the reset password link</string>
    <string name="reset_password">Reset Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="user">User</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="best_in_selling">Best in Selling</string>
    <string name="best_products">Best Products</string>
    <string name="best_in_category">Best in Category</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="manufactured_by">Manufactured By</string>
    <string name="colors">Colors</string>
    <string name="free_delievery_available">Free delievery available</string>
    <string name="you_have_not_selected_any_items_yet">You have not selected Any items yet</string>
    <string name="quantity">Quantity</string>
    <string name="buy_now">Buy Now</string>
    <string name="total_amount">Total Amount</string>
    <string name="selected_items">Selected Items</string>
    <string name="checkout">Checkout</string>
    <string name="address">Address</string>
    <string name="add_address">Add Address</string>
    <string name="pin_code">Pin code</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="local_area">Local area</string>
    <string name="street">Street</string>
    <string name="house">House</string>
    <string name="billing">Billing</string>
    <string name="payment_method">Payment Method</string>
    <string name="waring_text">This app is completely fake and does not support any payments and is completely fake. However if you want to proceed ahead it is at your own risk</string>
    <string name="proceed">Proceed</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="orders">Orders</string>
    <string name="name">Name</string>
    <string name="personal_details">Personal Details</string>
    <string name="track_orders">Track Orders</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="region">Region</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
</resources>